# pricewaze

./: .gitignore  ANALISIS_REPOS_OPEN_SOURCE.md  APLICAR_MIGRACION_TRIGGER.md  APLICAR_TODAS_LAS_MIGRACIONES.sql  APLICAR_TRIGGER_FIX.md  APPLY_PRO_ACCESS.sql  BMAD_COVERAGE_VERIFICATION.md  CHECKLIST_CIERRE_SPRINT.md  CLAUDE.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_DB_OPTIMIZATION.md  COMMIT_MESSAGE_ONBOARDING_DEMO.md  COMMIT_MESSAGE_SIGNALS_WAZE.md  COMMIT_MESSAGE_SPRINT_2026_01_11.md  COMMIT_MESSAGE_SPRINT_SIGNALS_ROUTES.md  COMMIT_MESSAGE_TRIGGER_FIX.md  DIE_COMPLETE_IMPLEMENTATION.md  DIE_IMPLEMENTATION.md  FINAL_CHECK_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FIXES_SESSION_2026-01-08.md  GAMIFICATION_IMPLEMENTATION_CHECKLIST.md  INSTRUCCIONES_FIX_TRIGGER.md  MVP_0.007_DEBUG_PLAN.md  NCE_PHASE0_COMPLETE.md  NCE_PHASE0_STATUS.md  PLAN_IMPLEMENTACION.md  PRD.md  QUICK_START_NCE_PHASE0.md  README.md  READY_TO_COMMIT.md  SOFT_LAUNCH_ENV.md  SOFT_LAUNCH_IMPLEMENTATION.md  SOFT_LAUNCH_PRO_ACCESS.md  SOFT_LAUNCH_VERIFICATION_REPORT.md  SPRINT_CLOSED_2026-01-08.md  SPRINT_CLOSED_2026_01_10.md  SPRINT_CLOSURE_2026-01-10.md  SPRINT_CLOSURE_2026-01-10_FINAL.md  SPRINT_CLOSURE_2026_01_11.md  (+45 more)
.llm/: .llm-lock  (+1 more)
crewai/: ACTIVITY_LOG.md  README.md  SPRINT_25_AGENTS.md  pyproject.toml  run.py  run_tests.py
crewai/agents/: __init__.py  coordinator.py  legal_advisor.py  market_analyst.py  negotiation_advisor.py  pricing_analyst.py
crewai/api/: __init__.py  main.py
crewai/avm/: __init__.py  comparables.py  model.py  valuation.py
crewai/config/: __init__.py  market.py  settings.py
(+672 files in other folders)
